# Training-ML-with-Rust

./: Cargo.toml  README.md  assignment_2.ipynb  benchmark.py  pyproject.toml  requirements.txt
src/: lib.rs  main.rs
